<resources>
    <string name="app_name">xd_attempt1</string>
<!--    <string name="app_name"> </string>-->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_______string"> </string>
    <string name="________string"> *</string>
    <string name="_______________string"> .</string>
    <string name="__________string">  *</string>
    <string name="id_example_com_string">ID@example.com</string>
    <string name="________ek1_string"> *</string>
    <string name="______string"></string>
    <string name="___________string">  *</string>
    <string name="_________string"> </string>
    <string name="_______ek1_string"> </string>
    <string name="__________ek1_string">  </string>
    <string name="______________string">  ()</string>
    <string name="______________________string">     ()</string>
    <string name="______ek1_string"></string>
</resources>